--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,22 @@
 </head>
 <body>
     <div class="wrapper-background">        <!-- Обёртка для общего background -->
+        <div class="overlay"></div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <header class="header">     <!-- Хедер -->
             <div class="container">
                 <div class="header__grid">
-                    <div class="header__logo">
-                        <img src="img/logo.jpg" alt="">
+                    <div class="header__logo">  <!-- Логотип -->
+                        <img src="img/logo.png" alt="">
                     </div>
-                    <div>
+                    <div>       <!-- Номера телефонов и Блок текста -->
                         <div class="header__block">
                             <div>
-                                <div class="header__contacts">
+                                <div class="header__contacts">  <!-- номер телефона -->
                                     <div>
                                         <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 18.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -89,7 +95,7 @@
                                 <div class="divider"></div>
                             </div>
                             <div>
-                                <div class="header__contacts">
+                                <div class="header__contacts">  <!-- номер телефона -->
                                     <div>
                                         <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -168,7 +174,7 @@
                             с 09:00 до 22:00
                         </div>
                     </div>
-                    <div class="header__buttons">
+                    <div class="header__buttons">       <!-- Кнопки Вызов и Вотсап -->
                         <a href="" class="button button_header button_header-green">Написать <span>WhatsApp</span></a>
                         <a href="" class="button button_header">Позвонить сейчас</a>
                     </div>
@@ -218,6 +224,27 @@
                                 <input type="checkbox" name="polity" required checked>
                             </div>
                         </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="serv-list">
+            <div class="container">
+                <h2 class="serv-list__title">Профессиональный демонтаж в Москве и Московской области</h2>
+                <div class="serv-list__wrapper">
+                    <div class="serv-list__block">
+                        <div class="serv-list__item">Демонтаж любых зданий</div>
+                        <div class="serv-list__item">Демонтаж комерческих помещений</div>
+                        <div class="serv-list__item">Демонтаж многоэтажек</div>
+                        <div class="serv-list__item">Демонтаж загородных домов</div>
+                        <div class="serv-list__item">Демонтаж промышленных строений</div>
+                    </div>
+                    <div class="serv-list__block">
+                        <div class="serv-list__item">Демонтаж любых зданий</div>
+                        <div class="serv-list__item">Демонтаж комерческих помещений</div>
+                        <div class="serv-list__item">Демонтаж многоэтажек</div>
+                        <div class="serv-list__item">Демонтаж загородных домов</div>
+                        <div class="serv-list__item">Демонтаж промышленных строений</div>
                     </div>
                 </div>
             </div>
