--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <title>Document</title>
 </head>
 <body>
@@ -247,7 +248,50 @@
         </div>
     </section>
 
+    <div class="wrapper-background">
+        <div class="overlay"></div>
+        <section class="advantage">
+            <div class="container position-relative">
+                <div class="my-slider">
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                    <div class="advantage__block">
+                        <div class="advantage__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
+                        </div>
+                    </div>
+                  </div>
+                  <button class="prev"><img src="../icons/left.svg" alt=""></button>
+                  <button class="next"><img src="../icons/right.svg" alt=""></button>
+            </div>
+        </section>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
