сделал секцию преимуещства

--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
     </div>
     <section class="price">     <!-- Секция Цены -->
         <div class="container">
-            <h2 class="price__title">цены</h2>
+            <h2 class="title">цены</h2>
             <div class="price__wrapper row">
                 <div class="serv-price serv-price_price col-6 col-lg-4">
                     <div class="serv-price__item">Демонтаж любых зданий от <strong>1500</strong> руб.</div>
@@ -248,38 +248,87 @@
         </div>
     </section>
 
+     <!-- Секция 5 карточек преимущества -->
+     <section class="advantage-items">
+        <div class="container">
+            <h2 class="title">наши преимущества</h2>
+            <div class="row">
+                <div class="col-md ">
+                    <div class="advantage-items__block">
+                        <img class="advantage-items__img" src="../icons/advan/dogovor.png" alt="">
+                        <div class="advantage-items__text">Работаем по договору</div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="advantage-items__block">
+                        <img class="advantage-items__img" src="../icons/advan/man.png" alt="">
+                        <div class="advantage-items__text">квалифицированные специалисты</div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="advantage-items__block">
+                        <img class="advantage-items__img" src="../icons/advan/time.png" alt="">
+                        <div class="advantage-items__text">выполнение работы в установленный срок</div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="advantage-items__block">
+                        <img class="advantage-items__img" src="../icons/advan/hand.png" alt="">
+                        <div class="advantage-items__text">высокое качество услуг</div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="advantage-items__block">
+                        <img class="advantage-items__img" src="../icons/advan/years.png" alt="">
+                        <div class="advantage-items__text">более 10 лет работы</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Текст к секции Преимущества -->
+    <div>
+        <div class="container">
+            <div class="advantage-slogan">
+                тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст тут очень важный текст
+            </div>
+        </div>
+    </div>
+
     <div class="wrapper-background">
         <div class="overlay"></div>
-        <section class="advantage">
+        <!-- Секция преимущества Слайдер -->
+        <section class="advantage-slider">
             <div class="container position-relative">
                 <div class="my-slider">
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
-                    <div class="advantage__block">
-                        <div class="advantage__text">
+                    <div class="advantage-slider__block">
+                        <div class="advantage-slider__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt nobis quaerat culpa dignissimos. Ex.
                         </div>
                     </div>
